--- a/templates/Admin/StandardFormLayout.twig
+++ b/templates/Admin/StandardFormLayout.twig
@@ -33,7 +33,7 @@
 				<select class="widefat" id="{{ id }}" name="field[{{ id }}]">
 					<option></option>
 					{% for key,value in field.values %}
-					<option name="{{ attribute( value, field.id_field ) }}" {% if field.selected == attribute( value, field.id_field ) %}selected="selected"{% endif %}>{{ attribute( value, field.text_field ) }}</option>
+					<option value="{{ attribute( value, field.id_field ) }}" {% if field.selected == attribute( value, field.id_field ) %}selected="selected"{% endif %}>{{ attribute( value, field.text_field ) }}</option>
 					{% endfor %}
 				</select>
 			</td>
